refactor: 백엔드 대형 서비스 책임 분리